
- bach.roll:
    MIDI import: if both markmeasures and markdivisions are on (as per default), and "bach barline" markers are present in the MIDI file, then measure barlines are not calculated
        New "importdivisions" message attribute, overriding "markdivisions"
        Fixed bug potentially producing negative durations. This has entailed removing a 1ms reduction to all durations.
    New group display mode (@showgroups) as BEAMINGS ---> this has become the default
	If you wanted to keep the old modes as default, change the attribute explicitly  
    New "dump selection ..." message for bach.roll to only output parameters for selected content.
    At the same time, the "dumpselection" message is deprecated in favor of either "dump selection playout" "plump"

- bach.score:
    Default behavior of setcursor in presence of grace notes has changed: it only accounts for grace notes in the first measure.
	You can change this by using the new attribute @nudgeforgrace, given to many messages, including:
	"setcursor", "getpixelpos", "timetopixel", "timepoint", "interp", "overtype"
	The same messages also now allows for an @accurate mode (not breaking any compatibility).

- bach.pitchpack now treats negative degrees as descending steps (see the bell / bach.expr makepitch function)

- bach.transcribe: now the "allnotesoff" message only updates tails when the engine is on. 
			(As this one was a real bug, it should not break any existing patch, but out of caution check them anyway if you used it)

- bach.playkeys: the "routers" attribute is now static (only settable in the object box) and does not support the initial "+" sign any longer
    Use the new "autoassigncommands" attribute instead.


***********************
*** VERSION CHANGES ***
***********************

authorization: now the code for a given year can be entered until January of the next year

bach ecosystem: no extra memory is claimed by bach before the first bach object is created
