@@ -52,6 +52,8 @@ v0.8.2b
     MIDI import: if both markmeasures and markdivisions are on (as per default), and "bach barline" markers are present in the MIDI file, then measure barlines are not calculated
         New "importdivisions" message attribute, overriding "markdivisions"
         Fixed bug potentially producing negative durations. This has entailed removing a 1ms reduction to all durations.
+        Fixed bug potentially crashing Max with invalid MIDI files.
+        Now files with a larger track chunk count than actually present are imported (with a warning).
     New group display mode (@showgroups) as BEAMINGS ---> this has become the default
 	If you wanted to keep the old modes as default, change the attribute explicitly  
     New "dump selection ..." message for bach.roll to only output parameters for selected content.
